use $(CC) instead of hard-coded gcc

--- a/native/Makefile
+++ b/native/Makefile
@@ -3,10 +3,10 @@ CFLAGS := -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I../libs/libpg_q
 LDFLAGS := -L../libs/libpg_query -lpg_query
 
 libpg_query_jni.so: PgQueryWrapper.o
-	@gcc -shared -o libpg_query_jni.so PgQueryWrapper.o $(LDFLAGS)
+	@$(CC) -shared -o libpg_query_jni.so PgQueryWrapper.o $(LDFLAGS)
 
 PgQueryWrapper.o: PgQueryWrapper.c
-	@gcc $(CFLAGS) -fPIC -c PgQueryWrapper.c -o PgQueryWrapper.o
+	@$(CC) $(CFLAGS) -fPIC -c PgQueryWrapper.c -o PgQueryWrapper.o
 
 clean:
 	@rm -f *.o *.so
